Refactor: API enhanced.

--- a/idf_component.yml
+++ b/idf_component.yml
@@ -8,7 +8,8 @@ dependencies:
   idf:
     version: ">=4.1.0"
   elog:
-    git: git@github.com:pylover/elog.git
+    path: ../elog
+    # git: git@github.com:pylover/elog.git
   uaio:
     path: ../uaio
     # git: git@github.com:pylover/uaio.git
